WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97508
Nested try/finally should not confuse the finally unpopper in BytecodeGenerator::emitComplexJumpScopes
https://bugs.webkit.org/show_bug.cgi?id=97508
Summary
Nested try/finally should not confuse the finally unpopper in BytecodeGenerat...
Filip Pizlo
Reported
2012-09-24 18:17:02 PDT
Patch forthcoming.
Attachments
the patch
(5.04 KB, patch)
2012-09-24 18:22 PDT
,
Filip Pizlo
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2012-09-24 18:22:07 PDT
Created
attachment 165482
[details]
the patch
Filip Pizlo
Comment 2
2012-09-24 18:26:15 PDT
Landed in
http://trac.webkit.org/changeset/129440
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug