third_party/WebKit/Source/JavaScriptCore/bytecompiler/BytecodeGenerator.cpp
@@ -2484,6 +2484,7 @@ PassRefPtr<Label> BytecodeGenerator::emitComplexJumpScopes(Label* target, Contro
                     context.start = afterFinally;
                     m_tryContextStack.append(context);
                 }
+                poppedTryContexts.clear();
             }
             if (flipLabelScopes)
                 m_labelScopes = savedLabelScopes;
