third_party/WebKit/LayoutTests/fast/js/script-tests/try-try-return-finally-finally.js
@@ -1,0 +1,26 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+description(
+"Tests what would happen if you have nested try-finally's with interesting control statements nested within them. The correct outcome is for this test to not crash during bytecompilation."
+);
+
+function foo() {
+    try{
+        while(a){
+            try{
+                if(b){return}
+            }finally{
+                c();
+            }
+            if(d){return}
+        }
+    }finally{
+        e();
+    }
+}
+
+try {
+    foo();
+} catch (e) {
+    testPassed("It worked.");
+}
+
